<resources>
    <string name="app_name"> Kangoo Desktop </string>
    <string name="hello_world"> Hello world! </string>
    <string name="menu_settings"> Settings </string>
    <string name="title_activity_main"> LauncherUI </string>
    <string name="max_over_flow"> allowed only up to 9 shortcuts </string>
    <string name="is_exist"> same application can not exist </string>
    <string name="default_city"> Shenzhen </string>
    <string name="empty_string"> </string>
    <string name="douyun"> cloudy </string>
    <string name="dayu"> rain </string>
    <string name="douyunzhuanqin"> cloudy to clear </string>
    <string name="qinzhuandouyun"> Partly cloudy </string>
    <string name="xiaoyu"> drizzle </string>
    <string name="yujiaxue"> sleet </string>
    <string name="daxue"> snow </string>
    <string name="weifen"> breeze </string>
    <string name="xiaoxue"> snow </string>
    <string name="yin"> overcast </string>
    <string name="qing"> clear </string>
    <string name="zhenyu"> showers </string>
    <string name="leizhenyu"> thunderstorms </string>
    <string name="douyunzhuangleizhenyu"> Cloudy with thunderstorms </string>
    <string name="dayuzhuanleizhenyu"> heavy thunderstorms - </string>
    <string name="duoyunzhuanzhengyun"> Cloudy with showers </string>
    <string name="duoyunzhuangxiaoyu"> rain changing to rain </string>
    <string name="zhongyuzhuangxiaoyu"> moderate rain drizzle </string>
    <string name="xiaoyuzhuanduoyun"> cloudy light rain - </string>
    <string name="zhongyu"> moderate rain - </string>
    <string name="duoyunzhuanyin"> cloudy to overcast </string>
    <string name="zhengyuzhuangduoyun"> showers cloudy </string>
    <string name="yinzhuanqin"> Warrington </string>
    <string name="dadaobaoyu"> heavy rain </string>
    <string name="zhengyuzhuanzhongdaodayu"> moderate to heavy rain showers </string>
    <string name="weihoqu"> not get </string>
    <string name="button"> Button </string>
    <string name="wifi_set"> Wifi set </string>
    <string name="connect"> connection </string>
    <string name="forget"> ignore </string>
    <string name="connecting"> connection ... </string>
    <string name="simulate_key"> Simulate </string>
    <string name="wifi_name"> WIFI </string>
    <string name="wifi_siginal_name1"> weak </string>
    <string name="wifi_siginal_name2"> General </string>
    <string name="wifi_siginal_name3"> Strong </string>
    <string name="wifi_fail_to_scan"> Can not scan for networks </string>
    <string name="wifi_ssid"> Network SSID </string>
    <string name="wifi_security"> Security </string>
    <string name="wifi_signal"> Signal strength </string>
    <string name="wifi_status"> Status </string>
    <string name="wifi_speed"> Link speed </string>
    <string name="wifi_ip_address"> IP address </string>
    <string name="wifi_ip_address_hint"> 192.168.1.128 </string>
    <string name="wifi_eap_method"> EAP method </string>
    <string name="please_select_phase2"> Phase 2 authentication </string>
    <string name="wifi_eap_ca_cert"> CA certificate </string>
    <string name="wifi_eap_user_cert"> User certificate </string>
    <string name="wifi_eap_identity"> Identity </string>
    <string name="wifi_eap_anonymous"> Anonymous identity </string>
    <string name="wifi_password"> password </string>
    <string name="wifi_show_password"> Show password </string>
    <string name="wifi_ip_settings"> IP settings </string>
    <string name="wifi_security_short_wep"> WEP </string>
    <string name="wifi_security_short_wpa"> WPA </string>
    <string name="wifi_security_short_wpa2"> WPA2 </string>
    <string name="wifi_security_short_wpa_wpa2"> WPA/WPA2 </string>
    <string name="wifi_security_short_psk_generic"> @string/wifi_security_short_wpa_wpa2 </string>
    <string name="wifi_security_short_eap"> 802.1x </string>
    <string name="wifi_show_advanced"> Show advanced options </string>
    <string name="wifi_wps_setup_title"> Wi-Fi Protected Setup </string>
    <string name="wifi_wps_setup_msg"> Starting WPS \ u2026 </string>
    <string name="wifi_connected"> connected </string>
    <string name="wifi_connecting"> connection ... </string>
    <string name="proxy_settings_title"> Proxy settings </string>
    <string name="proxy_clear_text"> Clear </string>
    <string name="proxy_port_label"> Proxy port </string>
    <string name="proxy_port_hint" translatable="false"> 8080 </string>
    <string name="proxy_exclusionlist_label"> Bypass proxy for </string>
    <string name="proxy_exclusionlist_hint"> example.com, mycomp.test.com, localhost </string>
    <string name="proxy_defaultView_text"> Restore defaults </string>
    <string name="proxy_action_text"> Done </string>
    <string name="proxy_hostname_label"> Proxy hostname </string>
    <string name="proxy_hostname_hint"> proxy.example.com </string>
    <string name="proxy_error"> Attention </string>
    <string name="proxy_error_dismiss"> OK </string>
    <string name="proxy_error_invalid_host"> The hostname you typed is not valid. </string>
    <string name="proxy_error_invalid_exclusion_list"> The exclusion list you typed is not properly formatted. Type a comma-separated list of excluded domains. </string>
    <string name="proxy_error_empty_port"> You need to complete the port field. </string>
    <string name="proxy_error_empty_host_set_port"> The port field must be empty if the host field is empty. </string>
    <string name="proxy_error_invalid_port"> The port you typed is not valid. </string>
    <string name="proxy_warning_limited_support"> The HTTP proxy is used by the browser but may not be used by the other apps. </string>
    <string name="wifi_dns1"> DNS 1 </string>
    <string name="wifi_dns1_hint"> 8.8.8.8 </string>
    <string name="wifi_dns2"> DNS 2 </string>
    <string name="wifi_dns2_hint"> 4.4.4.4 </string>
    <string name="wifi_gateway"> Gateway </string>
    <string name="wifi_gateway_hint"> 192.168.1.1 </string>
    <string name="wifi_network_prefix_length"> Network prefix length </string>
    <string name="wifi_network_prefix_length_hint"> 24 </string>
    <string name="wifi_security_none"> None </string>
    <string name="wifi_security_wep"> WEP </string>
    <string name="wifi_security_wpa"> WPA PSK </string>
    <string name="wifi_security_wpa2"> WPA2 PSK </string>
    <string name="wifi_security_wpa_wpa2"> WPA/WPA2 PSK </string>
    <string name="wifi_security_psk_generic"> WPA2 PSK </string>
    <string name="wifi_security_eap"> 802.1x EAP </string>
    <string name="wifi_connect"> Connect </string>
    <string name="wifi_failed_connect_message"> Failed to connect to network </string>
    <string name="wifi_forget"> Forget </string>
    <string name="wifi_failed_forget_message"> Failed to forget network </string>
    <string name="wifi_save"> Save </string>
    <string name="wifi_failed_save_message"> Failed to save network </string>
    <string name="wifi_cancel"> Cancel </string>
    <string name="number_picker_increment_button"> Increase </string>
    <string name="number_picker_decrement_button"> Decrease </string>
    <string name="cancel"> Cancel </string>
    <string name="ok"> confirmation </string>
    <string name="timeout"> load timeout </string>
    <string name="zuixintuijian"> latest recommended </string>
    <string name="meidiaplay"> video player </string>
    <string name="game"> Games </string>
    <string name="news"> News </string>
    <string name="wifi_siginal"> signal strength </string>
    <string name="open_wifi"> open WIFI </string>
    <string name="close_wifi"> Close WIFI </string>
    <string name="volume"> sound </string>
    <string name="keydown_volume"> key tone </string>
    <string name="data_audio_output"> digital audio output </string>
    <string name="system_update"> detect the new version </string>
    <string name="more_setting"> More Settings </string>
    <string name="devices_manager"> Device Manager </string>
    <string name="unknow_source"> unknown application </string>
    <string name="able_unknow_source"> allow the installation of applications from unknown sources </string>
    <string name="check_app"> verification applications </string>
    <string name="check_app_message"> prohibit the installation of potentially harmful applications before installation or warn </string>
    <string name="install"> Installation </string>
    <string name="update"> upgrade </string>
    <string name="uninstall"> not installed </string>
    <string name="open"> Open </string>
    <string name="installing"> installation </string>
    <string name="wallpaper_manager"> Wallpaper Manager </string>
    <string name="output_mode"> output mode </string>
    <string name="output_mode_message"> set up your TV output mode </string>
    <string name="font_size"> font size </string>
    <string name="font_size_message"> big </string>
    <string name="wifi_display"> Wireless Display </string>
    <string name="wifi_display_message"> Open </string>
    <string name="open_storage_internal"> open memory </string>
    <string name="open_storage_sdcard"> Open SD </string>
    <string name="internal_storage"> internal storage </string>
    <string name="external_storage"> external storage </string>
    <string name="storge_total_size"> total capacity </string>
    <string name="storge_avalied_size"> available capacity </string>
    <string name="memory_available"> "free space" </string>
    <string name="memory_available_read_only"> "free space (read-only)" </string>
    <string name="memory_size"> "total capacity" </string>
    <string name="memory_calculating_size"> "Calculating ..." </string>
    <string name="memory_apps_usage"> "Application" </string>
    <string name="memory_media_usage"> "Media" </string>
    <string name="memory_downloads_usage"> "download" </string>
    <string name="memory_dcim_usage"> "Picture, Video" </string>
    <string name="memory_music_usage"> "Audio" </string>
    <string name="memory_media_misc_usage"> "other" </string>
    <string name="memory_media_cache_usage"> "cached data" </string>
    <string name="sd_eject" product="default"> "Unmount SD card" </string>
    <string name="mb"> MB </string>
    <string name="no_device_admins"> no device </string>
    <string name="font_set"> font settings </string>
    <string name="app_manegement"> application management </string>
    <string name="app_recently_opened"> display recently opened applications </string>
    <string name="show_all_apps"> Show All Programs </string>
    <string name="movie_string"> Movie </string>
    <string name="music_string"> Music </string>
    <string name="browser_string"> Browser </string>
    <string name="tv_string"> TV </string>
    <string name="appstore_string"> Market </string>
    <string name="applist_string"> Local </string>
    <string name="settings_string"> Settings </string>
    <string name="volume_media_description"> "music, videos, games and other media" </string>
    <string name="volume_ring_description"> "ringtone and notifications" </string>
    <string name="str_dialog"> dialog </string>
    <string name="str_appsort"> application categories </string>
    <string name="str_weatherchoose"> Select Weather </string>
    <string name="str_applist"> application list </string>
    <string name="str_allapps"> all applications </string>
    <string name="str_openappcache"> open the application cache </string>
    <string name="str_bottom"> bottom </string>
    <string name="str_market"> Market </string>
    <string name="str_autolocateaddr"> automatic positioning address is: </string>
    <string name="str_dongguan"> Dongguan </string>
    <string name="str_manuallyaddr"> manually select Address: </string>
    <string name="option_openapp"> directly open the application </string>
    <string name="option_catelog"> form open folder </string>
    <string name="option_rename"> modify the display name </string>
</resources>