<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CommonLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <!-- 天气和左边快捷键 -->

    <RelativeLayout
        android:layout_width="@dimen/common_width"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_light" >

        <com.mirageTeam.widget.WeatherView
            android:id="@+id/weather_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:nextFocusRight="@+id/button2"
            android:visibility="gone" />

        <com.mirageTeam.widget.ShortCutGridVIew
            android:id="@+id/gridview"
            android:layout_width="fill_parent"
            android:layout_height="220dip"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:horizontalSpacing="5dip"
            android:listSelector="@android:color/transparent"
            android:nextFocusRight="@+id/button2"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dip"
            android:visibility="gone" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/rlid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >

            <com.mirageTeam.widget.TimeControl
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dip" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/textView1"
                android:layout_marginTop="16dp"
                android:text="@string/str_dialog" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button2"
                android:layout_marginRight="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/str_appsort" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button3"
                android:layout_marginRight="16dp"
                android:layout_marginTop="25dp"
                android:text="@string/str_weatherchoose" />

            <Button
                android:id="@+id/showapps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/button1"
                android:layout_marginTop="33dp"
                android:layout_toRightOf="@+id/button1"
                android:text="@string/str_applist" />

            <Button
                android:id="@+id/showallapps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/showapps"
                android:layout_below="@+id/showapps"
                android:layout_marginRight="15dp"
                android:layout_marginTop="36dp"
                android:text="@string/str_allapps" />

            <Button
                android:id="@+id/showallMemoryapps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/showapps"
                android:layout_below="@id/showallapps"
                android:layout_marginRight="15dp"
                android:text="@string/str_openappcache" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="@string/str_bottom" />

            <Button
                android:id="@+id/market"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="@string/str_market" />
        </RelativeLayout>
        <!-- 显示应用列表 ，在这里控制显示和隐藏，这里要加个动画效果显示这个布局，群共享里面有scaleButton的例子把动画拿过来 -->

        <RelativeLayout
            android:id="@+id/application_toggle_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <GridView
                android:id="@+id/appview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:columnWidth="50dp"
                android:numColumns="3"
                android:visibility="gone" >
            </GridView>
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>
