<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="220dip"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="@dimen/common_width"
        android:layout_height="fill_parent" >

        <TextView
            android:layout_marginTop="30dp"
             android:layout_marginLeft="20dip"
            android:id="@+id/location_title"
             android:textColor="@android:color/white"
    							android:minHeight="40dip"
    						android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_autolocateaddr" />

        <TextView
            android:id="@+id/location_text"
             android:textColor="@android:color/white"
    							android:minHeight="40dip" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_title"
            android:layout_centerInParent="true"
            android:text="@string/str_dongguan"
            android:textSize="60sp" />
 
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textColor="@android:color/white"
             android:layout_marginLeft="10dip"
             android:layout_marginTop="10dip"
    							android:minHeight="40dip"
    						android:textSize="18sp"
            android:text="@string/str_manuallyaddr" />

        <GridView
            android:id="@+id/cityChoose"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnWidth="90dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="10dp" >
        </GridView>
    </LinearLayout>

</LinearLayout>
